# waste_classifier-app

./: .gitattributes  .gitignore  README.md  app.py  pyproject.toml  render.yaml  waste_classifier.db  waste_classifier_model.h5
requirements/: requirements.txt
templates/: index.html
