[tool.poetry]
name = "waste_classifier_app"
version = "0.1.0"
description = "Waste classification application"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.0.1"
werkzeug = "2.0.1"
flask-cors = "4.0.0"
tensorflow-cpu = "2.13.0"
keras = "2.13.1"
numpy = "1.24.3"
pillow = "10.0.0"
requests = "2.31.0"
sqlalchemy = "1.4.41"
flask-sqlalchemy = "2.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
